--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "16.6.0-alpha.8af6728",
     "react-native": "0.57.4",
     "react-native-paper": "^2.2.4",
+    "react-native-storage": "^0.2.3",
     "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^2.18.2",
     "react-navigation-material-bottom-tabs": "^0.4.0"
